--- a/Assets/Script/ProjectSK.asmdef
+++ b/Assets/Script/ProjectSK.asmdef
@@ -1,3 +1,16 @@
-﻿{
-	"name": "ProjectSK"
+{
+    "name": "ProjectSK",
+    "references": [
+        "GUID:b20a26ed67a810f41b8b671f07fc6109",
+        "GUID:2441ee31d535ddb43aa2cd49fc0e37e0"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
