--- a/Assets/Script/Game/UI/ProkectSK.Game.UI.asmdef
+++ b/Assets/Script/Game/UI/ProkectSK.Game.UI.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "ProjectSK.Game",
+    "name": "ProkectSK.Game.UI",
     "references": [
-        "GUID:b20a26ed67a810f41b8b671f07fc6109",
-        "GUID:0ae6e2ce72a19a54a85ca2883012be54"
+        "GUID:2441ee31d535ddb43aa2cd49fc0e37e0",
+        "GUID:5faaceade77b2ef48ac74b799fd5124c",
+        "GUID:b20a26ed67a810f41b8b671f07fc6109"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
