--- a/Assets/Script/Map/MapEvent/ProjectSK.Map.MapEvent.asmdef
+++ b/Assets/Script/Map/MapEvent/ProjectSK.Map.MapEvent.asmdef
@@ -1,8 +1,8 @@
 {
-    "name": "ProjectSK.Game",
+    "name": "ProjectSK.Map.MapEvent",
     "references": [
-        "GUID:b20a26ed67a810f41b8b671f07fc6109",
-        "GUID:0ae6e2ce72a19a54a85ca2883012be54"
+        "GUID:037611f7fca1e9142b0713acf2f95a2d",
+        "GUID:b20a26ed67a810f41b8b671f07fc6109"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
