--- a/Assets/Script/Data/ProjectSK.Data.asmdef
+++ b/Assets/Script/Data/ProjectSK.Data.asmdef
@@ -1,8 +1,6 @@
 {
     "name": "ProjectSK.Data",
-    "references": [
-        "GUID:5966481a256a8fb4fa04cce56d18971d"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
