--- a/Assets/Script/Game/ProjectSK.Game.asmdef
+++ b/Assets/Script/Game/ProjectSK.Game.asmdef
@@ -1,6 +1,7 @@
 {
     "name": "ProjectSK.Game",
     "references": [
+        "GUID:5faaceade77b2ef48ac74b799fd5124c",
         "GUID:b20a26ed67a810f41b8b671f07fc6109",
         "GUID:0ae6e2ce72a19a54a85ca2883012be54"
     ],
