--- a/Assets/Script/Map/MapEvent/ProjectSK.Map.MapEvent.asmdef
+++ b/Assets/Script/Map/MapEvent/ProjectSK.Map.MapEvent.asmdef
@@ -2,7 +2,8 @@
     "name": "ProjectSK.Map.MapEvent",
     "references": [
         "GUID:037611f7fca1e9142b0713acf2f95a2d",
-        "GUID:b20a26ed67a810f41b8b671f07fc6109"
+        "GUID:b20a26ed67a810f41b8b671f07fc6109",
+        "GUID:5faaceade77b2ef48ac74b799fd5124c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
