--- a/Assets/Script/ProjectSK.asmdef
+++ b/Assets/Script/ProjectSK.asmdef
@@ -1,9 +1,6 @@
 {
     "name": "ProjectSK",
-    "references": [
-        "GUID:b20a26ed67a810f41b8b671f07fc6109",
-        "GUID:2441ee31d535ddb43aa2cd49fc0e37e0"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
